--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,12 @@ version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
     "numpy>=1.20",
-    "scikit-learn>=0.24",
-    "torch>=1.13",
+    "matplotlib>=3.7",
+    "scikit-learn>=1.2",
+    "scikit-image>=0.20",
+    "torch>=2.0.1",
+    "tqdm>=4.62",
+    "Pillow>=9.5",
 ]
 
 [project.optional-dependencies]
