--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "torch>=2.0.1",
     "tqdm>=4.62",
     "Pillow>=9.5",
+    "pyraug>=0.0.6",
+    "pythae>=0.1.2",
 ]
 
 [project.optional-dependencies]
