--- a/.gitignore
+++ b/.gitignore
@@ -172,6 +172,7 @@ data/raw/
 data/processed/
 data/processed_by_modality/
 data/hf_dataset_healthy/
+data/synthetic_healthy/
 
 # Models
 models/**/*.json
