--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,3 +1,3 @@
 datasets:
   url_data_normal: https://drive.google.com/uc?id=1pYQvK3T-ZUDrAC3sQVC93aTI7jEbESqx
-  url_data_patho: null
+  url_data_patho: https://drive.google.com/drive/folders/1gE15re--0CACuhXkxHMi0ZJEjuyfLTu7?usp=share_link
