Update .gitignore to include data/hf* directory

--- a/.gitignore
+++ b/.gitignore
@@ -172,7 +172,7 @@ data/raw/
 data/processed/
 data/processed_patho/
 data/processed_by_modality/
-data/hf_dataset_healthy/
+data/hf*/
 data/synthetic_healthy/
 
 # Models
